--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "npx json-server --watch --port 5050  src/data/db.json"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
