--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0"
   }
 }
